--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@ limitations under the License. -->
     <string name="action_settings">Settings</string>
     <string name="hint_word">Word…</string>
     <string name="button_save">Save</string>
+    <string name="button_edit">Edit</string>
     <string name="empty_not_saved">Word not saved because it is empty.</string>
     <string name="generic_text">ipsum lorem.</string>
 </resources>
